@@ -1,9 +1,9 @@
 package com.umc.board.src.entity;
 
-import lombok.AccessLevel;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
+import com.umc.board.global.audit.AuditListener;
+import com.umc.board.global.audit.Auditable;
+import com.umc.board.global.audit.BaseTime;
+import lombok.*;
 import org.hibernate.annotations.GenericGenerator;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
@@ -11,12 +11,12 @@ import javax.persistence.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Getter
 @Entity
+@EntityListeners(AuditListener.class)
 @NoArgsConstructor(access = AccessLevel.PROTECTED)
-public class Member {
+public class Member implements Auditable {
     @Id
     @GeneratedValue(generator = "uuid2")
     @GenericGenerator(name = "uuid2", strategy = "uuid2")
@@ -28,11 +28,16 @@ public class Member {
     @Column(nullable = false, unique = true)
     private String githubId;
 
-    @ElementCollection(fetch = FetchType.EAGER)
     @Enumerated(EnumType.STRING)
+    @ElementCollection(fetch = FetchType.EAGER)
     private List<Role> role = new ArrayList<>(List.of(Role.ROLE_USER));
 
     private String refreshToken;
+
+    @Setter
+    @Embedded
+    @Column(nullable = false)
+    private BaseTime baseTime;
 
     @Builder
     public Member(String githubId, String refreshToken) {
@@ -41,7 +46,7 @@ public class Member {
     }
 
     public List<SimpleGrantedAuthority> getRole() {
-        return role.stream().map(Role::name).map(SimpleGrantedAuthority::new).collect(Collectors.toList());
+        return role.stream().map(Role::name).map(SimpleGrantedAuthority::new).toList();
     }
 
     public void updateRefreshToken(String refreshToken) {
